update locales from crowdin

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,7 @@ de:
   activerecord:
     attributes:
       work_package:
-        position: Position
+        position: Position ruby
         remaining_hours: Verbleibende Stunden (ruby)
         story_points: Story Punkte
         backlogs_work_package_type: Backlog Typ
