--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -74,6 +74,9 @@ pt-BR:
   backlogs_velocity_missing: Nenhuma velocidade foi calculada para este projeto
   backlogs_velocity_varies: Velocidade varia significativamente ao longo de sprints
   backlogs_wiki_template: Modelo para a página de wiki da sprint
+  backlogs_include_subprojects: "mostrar subprojetos"
+  backlogs_hide_subprojects: "esconder subprojetos"
+
   button_edit_wiki: Editar página wiki
   error_intro_plural: 'Foram encontrados os seguintes erros :'
   error_intro_singular: 'Foi encontrado o seguinte erro:'
